# code-pulse

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  .vscodeignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  pages.yml  release-desktop.yml
assets/brand/: README.md
docs/plans/: 2026-06-09-ai-analytics-device-service-plan.md
docs/reports/: 2026-06-09-codepulse-platform-strategy.md
platform/: .gitignore  .mocharc.cjs  package-lock.json  package.json
platform/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
platform/apps/desktop/src-tauri/capabilities/: default.json
platform/apps/desktop/src-tauri/icons/: icon.icns
platform/apps/desktop/src-tauri/src/: lib.rs  main.rs
platform/hooks/: forward.sh  install-claude.sh  install-droid.sh
platform/registry-catalog/: scn.claude-code.json  scn.cline.json  scn.cursor-ide.json  scn.factory-droid.json  scn.kilo.json  scn.openai-codex.json
platform/scripts/: sign-manifests.mjs
platform/tests/: tsconfig.json
scripts/: ci-local.sh  seed-data.js
site/: docs.html  index.html  main.js  styles.css
src/: extension.ts
src/analytics/: AnalyticsEngine.ts  GoalProgress.ts  ProductivityScorer.ts
src/api/: ApiServer.ts
src/client/: DaemonClient.ts
src/detectors/: AiExtensionDetector.ts  LanguageDetector.ts  (+2 more)
test/: runTest.ts
webview/: chart.min.js  dashboard.css  dashboard.js  main.css  main.js  vscode.css
(+129 files in other folders)
