[package]
name = "code-pulse-desktop"
version = "0.1.0"
description = "Code Pulse desktop app"
authors = ["Code Pulse"]
edition = "2021"

[lib]
name = "code_pulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "code-pulse-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true